rationalize css and use stylesheet